# amd-rocm-platform-engineering

./: .gitignore  EVIDENCE-CONTRACT.md  NAMING-CONVENTIONS.md  README.md  pp  pyproject.toml
 benchmark-contracts/schemas/: software-stack.schema.json
01-host-qualification/: README.md
01-host-qualification/evidence/: linux-baseline.json  provider-node.json  virtualization-baseline.txt
benchmark-contracts/: EXPERIMENT-CONTRACT.md  EXPERIMENT-RESULT-CONTRACT.md  HARDWARE-PROFILE-CONTRACT.md  SOFTWARE-STACK-CONTRACT.md  WORKLOAD-PROFILE-CONTRACT.md
benchmark-contracts/examples/exp-p02-003-pinned-memory-transfer/: experiment.yaml
benchmark-contracts/hardware-profiles/: hw-example-mi300x-8x-spx-nps1.yaml
benchmark-contracts/schemas/: experiment-contract.schema.json  hardware-profile.schema.json  workload-profile.schema.json
benchmark-contracts/software-stacks/: sw-example-vllm-aiter-bf16-r01.yaml  sw-hip-native-bf16-r01.yaml
benchmark-contracts/support-baselines/: support-mi300x-rocm-host-r01.yaml
benchmark-contracts/workloads/: wl-example-dense-long-short-steady-c08.yaml
failure-atlas/: TEMPLATE.md  failure-001-container-kfd-permission-denied.md
operator-playbooks/: RULE-TEMPLATE.md
tests/contracts/: test_experiment_contract.py  test_experiment_result.py  test_hardware_profile.py  test_phase_1_support_baseline.py  test_repository_contracts.py  test_software_stack.py  test_workload_profile.py
tests/host_qualification/: test_linux_baseline.py  test_provider_node_identity.py
tests/runner/: test_experiment_runner.py
(+11 files in other folders)
