[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amd-rocm-platform-engineering"
version = "0.1.0"
description = "Production qualification and inference engineering for AMD Instinct and ROCm platforms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [ 
  "pydantic>=2.8,<3.0", 
  "PyYAML>=6.0,<7.0", 
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rocm_platform_engineering*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra"
]

[project.optional-dependencies] 
dev = [
  "pytest>=8.0,<9.0", 
]
